# SeaSound

./: .gitignore  PR3b_testing.py  README.md  TODO.txt  environment.yml  pyproject.toml  requirements.txt  validate_streaming.py
config/: default.yaml  deployment_metadata_format.csv
docs/profiling/: golden_float32_baseline_per_process.csv  phase_1_refactor_summary.csv  seasound_stage_memory.csv
seasound.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
seasound/analysis/: __init__.py  base.py  calculate_stft.py  event_detection.py  ltsa.py  registry.py  spectral_percentiles.py  spectrogram.py  tob_levels.py
tests/: conftest.py  golden.py  golden_io.py  test_analysis_integration.py  test_analysis_modules.py  test_band_threshold_diagnostics.py  test_base_matrix.py  test_build_stft_matrix.py  test_calculate_stft.py  test_calibration.py  test_characterisation.py  test_characterisation_legacy.py  test_configs.py  test_core_stft.py  test_event_detection.py  test_event_detection_plot_integration.py  test_golden_baseline.py  test_integration_pipeline.py  test_output_layout.py  test_plotting_event_detection.py  test_plotting_ltsa.py  test_reader.py  test_reader_trim.py  test_resolve_calibration.py  test_resume.py  test_spectral.py  test_spectral_percentiles.py  test_stft.py  test_stft_store.py  test_streaming_base_matrix.py  test_streaming_invariance.py  test_streaming_stft.py  test_streaming_stft_render.py  test_substrates.py  tests_plotting_common.py
tools/: README.md  profile_run.py  profile_seasound_stages.py  profile_streaming_stages.py
(+33 files in other folders)
