# SeaSound/pyproject.toml

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seasound"
version = "0.1.0"
description = "Modular pipeline for marine acoustic data analysis"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "soundfile>=0.12",
    "pyarrow>=12.0",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
maad = ["scikit-maad>=1.3"]

[project.scripts]
seasound = "seasound.core.pipeline:cli_main"

[tool.setuptools.packages.find]
include = ["seasound*"]